[package]
name = "axum-query-extractor"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false }
serde_qs = "0.13"
thiserror = "2.0"
urlencoding = "2.1"
